// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default onUpdate options 1`] = `
Object {
  "Constructor": "RoutesSettingsParagraph",
  "Options": Object {
    "ID": "component",
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "editFormVisible": true,
    "form": [Function],
    "onUpdateValue": [Function],
    "paragraphClassName": "mg-b-0",
    "title": "",
    "value": "",
  },
  "html": "
<h6></h6>
<p class=\\"mg-b-0\\">
  <a>
    <i class=\\"icon-pencil\\"></i>
  </a>
  <button data-test-dummy-button=\\"\\">Click me!</button>
  <!--DynamicComponent-->
  <!--if-->
</p>
",
}
`;

exports[`default onUpdate options 2`] = `
Object {
  "Constructor": "RoutesSettingsParagraph",
  "Options": Object {
    "ID": "component",
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "editFormVisible": false,
    "form": [Function],
    "onUpdateValue": [Function],
    "paragraphClassName": "mg-b-0",
    "title": "",
    "value": "",
  },
  "html": "
<h6></h6>
<p class=\\"mg-b-0\\">
  <a>
    <i class=\\"icon-pencil\\"></i>
  </a>
  <!--if-->
</p>
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Constructor": "RoutesSettingsParagraph",
  "Options": Object {
    "ID": "component",
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "editFormVisible": false,
    "form": null,
    "onUpdateValue": [Function],
    "paragraphClassName": "mg-b-0",
    "title": "",
    "value": "",
  },
  "html": "
<h6></h6>
<p class=\\"mg-b-0\\">
  <a>
    <i class=\\"icon-pencil\\"></i>
  </a>
  <!--if-->
</p>
",
}
`;
